--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,14 @@
 body {
-  background-color: #00479d;
+
 }
-h1 {
-  background-color: #503400;
-  color: white;
-  font-size: 4em;
-  line-height: 4em;
+.jumbotron {
+  background: linear-gradient(to bottom, skyblue,white);
+  color: #00479d;
   text-align: center;
   font-family: Georgia, serif;
   border-radius: 25px;
 }
 
 div {
-  background-color: white;
   color: #503400;
 }
